fixed jpackage invocation and upgraded to Kotlin 1.9.10