@@ -1,4 +1,3 @@
-import java.util.concurrent.TimeUnit
 import java.util.spi.ToolProvider
 
 object JPackage {
@@ -13,16 +12,17 @@ object JPackage {
         winIcoIconPath: String? = null,
         winShortcut: Boolean = false,
         winMenu: Boolean = false,
-        winPackageType: String = "msi", //or "exe"
+        winPackageType: WinPackageType,
         linuxPngIconPath: String? = null,
         linuxShortcut: Boolean = false,
         linuxMenuGroup: String? = null,
-        linuxPackageType: String = "deb", //or "rpm"
-        macIcnsIconPath: String? = null
+        linuxPackageType: LinuxPackageType,
+        macIcnsIconPath: String? = null,
+        verbose: Boolean = false,
     ): Int {
         fun MutableList<String>.add(paramName: String, paramValue: String) {
             add(paramName)
-            if(paramValue.contains(' ')) {
+            if (paramValue.contains(' ')) {
                 add(""""$paramValue"""")
             } else {
                 add(paramValue)
@@ -30,29 +30,32 @@ object JPackage {
         }
 
         val currentOS: OS = getCurrentOS()
-        val arguments: Array<String> = ArrayList<String>(16).let {args->
+        val arguments: Array<String> = ArrayList<String>(16).let { args ->
+            if (verbose) args.add("--verbose")
             args.add("--name", name)
             args.add("--description", description)
             args.add("--app-version", appVersion)
             args.add("--input", inputDir)
             args.add("--dest", destinationDir)
             args.add("--main-jar", mainJar)
-            if(addModules.isNotEmpty()) {
+            if (addModules.isNotEmpty()) {
                 args.add("--add-modules", addModules.joinToString(separator = ",") { it.replace(" ", "") })
             }
-            when(currentOS) {
+            when (currentOS) {
                 OS.WIN -> {
-                    args.add("--type", winPackageType)
+                    args.add("--type", winPackageType.toArg())
                     winIcoIconPath?.let { args.add("--icon", winIcoIconPath) }
-                    if(winShortcut) args.add("--win-shortcut")
-                    if(winMenu) args.add("--win-menu")
+                    if (winShortcut) args.add("--win-shortcut")
+                    if (winMenu) args.add("--win-menu")
                 }
+
                 OS.LINUX -> {
-                    args.add("--type", linuxPackageType)
+                    args.add("--type", linuxPackageType.toArg())
                     linuxPngIconPath?.let { args.add("--icon", linuxPngIconPath) }
-                    if(linuxShortcut) args.add("--linux-shortcut")
+                    if (linuxShortcut) args.add("--linux-shortcut")
                     linuxMenuGroup?.let { args.add("--linux-menu-group", linuxMenuGroup) }
                 }
+
                 OS.MAC -> {
                     args.add("--type", "pkg")
                     macIcnsIconPath?.let { args.add("--icon", macIcnsIconPath) }
@@ -61,15 +64,9 @@ object JPackage {
             args.toTypedArray()
         }
 
-        return execJpackageViaRuntime(arguments)
+        return execJpackageViaToolProvider(arguments)
     }
 
-    /**
-     * switch to this method for invoking jpackage
-     * TODO fix bug when executing on Ubuntu
-     * executing: jpackage --name VoidChess --description "a chess program" --app-version 3.6 --input build/libs --dest build/installer --main-jar voidchess-3.6-all.jar --add-modules java.desktop --type deb --icon about/shortcut-icon2.png --linux-shortcut --linux-menu-group Games
-     * java.io.IOException: Command [fakeroot, dpkg-deb, -b, /tmp/jdk.jpackage961355904914198194/images, /home/stephan/.gradle/daemon/7.0/build/installer/voidchess_3.6-1_amd64.deb] exited with 2 code
-     */
     private fun execJpackageViaToolProvider(arguments: Array<String>): Int {
         val jpackageTool: ToolProvider = ToolProvider.findFirst("jpackage").orElseThrow {
             val javaVersion: String = System.getProperty("java.version")
@@ -77,25 +74,6 @@ object JPackage {
         }
         println("executing: jpackage " + arguments.joinToString(separator = " "))
         return jpackageTool.run(System.out, System.err, *arguments)
-    }
-
-    private fun execJpackageViaRuntime(arguments: Array<String>): Int {
-        val cmdAndArgs = ArrayList<String>(arguments.size+1).let {
-            it.add("jpackage")
-            it.addAll(arguments)
-            it.toTypedArray()
-        }
-        return try {
-            val minutesToAwait = 3L
-            println("executing: " + cmdAndArgs.joinToString(separator = " "))
-            println("(timeout: $minutesToAwait minutes)")
-            val process: Process = Runtime.getRuntime().exec(cmdAndArgs)
-            process.waitFor(minutesToAwait, TimeUnit.MINUTES)
-            return process.exitValue()
-        } catch (e: Exception) {
-            println("failed to execute jpackage. $e")
-            1
-        }
     }
 
     private fun getCurrentOS(): OS {
@@ -114,3 +92,12 @@ enum class OS {
     WIN, MAC, LINUX;
 }
 
+enum class LinuxPackageType {
+    DEB, RPM;
+}
+
+enum class WinPackageType {
+    MSI, EXE;
+}
+
+private fun Enum<*>.toArg(): String = this.name.lowercase()
